Fixed logo spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -205,6 +205,7 @@ h1,h2,h3 {
 	padding: 0;
 	color: var(--text);
 }
+h1 a { margin:0 !important; padding:0 !important; }
 h1 a:hover,
 h1 a:active {
 	background:0 0;
@@ -310,15 +311,18 @@ header {
 	grid-template-columns: 1fr;
 	align-items: center;
 	margin-bottom: 1.5em;
+	text-align: center;
 }
-	header h1 { text-align: center; }
-.logo {
+	header .logo { text-align: center; }
+	.logo a:link, .logo a:hover, .logo a:active, .logo a:visited { margin:0; padding:0; background: none; }
+
+.logo-svg {
 	fill: #4F5F6E;
 	margin: .5em auto 1em auto;
 	text-align: center;
 	width: 64%;
 }
-	a:active .logo,a:hover .logo {
+	a:active .logo-svg,a:hover .logo-svg {
 		fill: var(--link)
 	}
 nav {
@@ -515,7 +519,7 @@ footer nav {
 	margin:0;
 	text-align: center;
 }
-footer h1 {
+footer div {
 	align-content:center;
 	display:grid;
 	grid-column:span 1;
@@ -524,7 +528,7 @@ footer h1 {
 	padding:0;
 	text-align:center
 }
-footer .logo {
+footer .logo-svg {
 	margin: 0;
 	width:33%
 }
@@ -569,11 +573,13 @@ footer .info {
 		grid-template-columns:250px 1fr;
 		min-height:100px;
 		margin-bottom: 0;
-	}
-	header h1 {
 		text-align: left;
 	}
-	.logo {
+	header .logo {
+		text-align: left;
+	}
+	.logo { line-height: 1; }
+	.logo-svg {
 		text-align: left;
 		margin: 0;
 		width: 88%;
@@ -648,7 +654,7 @@ footer .info {
 	}
 	footer nav { 		justify-content: start;
 	}
-	footer h1 {
+	footer div {
 		margin:0;
 		text-align:right
 	}
@@ -656,7 +662,7 @@ footer .info {
 		grid-column:span 1
 	}
 */
-	footer .logo {
+	footer .logo-svg {
 		line-height: 1;
 		margin: 0;
 		width: 64%;
